syntax = "proto3";
option java_multiple_files = true;
package org.ywb.userservice.api;



message UserGetRequest {
    int32 id = 1;
}

message UserGetResponse {
    int32 id = 1;
    string name = 2;
    int32 gender = 3;
}

message UserCreateRequest {
    string name = 1;
    int32 gender = 2;
}

message UserCreateResponse {
    int32 id = 1;
}

service UserService {
    rpc Get(UserGetRequest) returns (UserGetResponse);
    rpc Create(UserCreateRequest) returns (UserCreateResponse);
}
